--- a/PyAcademy.ipynb
+++ b/PyAcademy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "14         14     Thomas High School     Charter            1635       1043130"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "14     Thomas High School            1635       1043130"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,13 +377,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +394,7 @@
        "[{'Total Budget': 24649428, 'Total Schools': 15, 'Total Students': 39170}]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#total_students = school_info_df['Total Students'].sum()\n",
@@ -417,8 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#total_budget = school_info_df['Total Budget'].sum()\n",
@@ -427,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -451,28 +457,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Total Budget</th>\n",
        "      <th>Total Schools</th>\n",
        "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24649428</td>\n",
        "      <td>15</td>\n",
        "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Budget  Total Schools  Total Students\n",
-       "0      24649428             15           39170"
+       "   Total Schools  Total Students  Total Budget\n",
+       "0             15           39170      24649428"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,15 +488,19 @@
     "#pd.DataFrame({'email':sf.index, 'list':sf.values})\n",
     "\n",
     "school_data_sum = pd.DataFrame(schools_summary)\n",
-    "school_data_sum\n",
+    "#school_data_sum\n",
     "\n",
     "#school_data = pd.Series([total_schools,total_students])\n",
-    "#school_data"
+    "#school_data\n",
+    "#df = df[['mean', 4,3,2,1]]\n",
+    "\n",
+    "school_ordered_df = school_data_sum[['Total Schools', 'Total Students', 'Total Budget']]\n",
+    "school_ordered_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +617,7 @@
        "4  Huang High School             97          84  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +642,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students_total = students_info_df[\"Student ID\"].count()\n",
+    "students_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +672,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +694,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,22 +706,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Average Math': 78.98537145774827, 'Average Reading': 81.87784018381414}]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Students Info\n",
-    "students_summary = [{\"Total Schools\":school_info_df['School Name'].count(),\n",
-    "                 \"Total Students\":school_info_df['Total Students'].sum(),\n",
-    "                 \"Total Budget\":school_info_df['Total Budget'].sum()}]\n",
+    "# Scores Info\n",
+    "students_summary = [{\"Average Math\":students_info_df[\"Math Score\"].mean(),\n",
+    "                 \"Average Reading\":students_info_df[\"Reading Score\"].mean()}]\n",
     "students_summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math</th>\n",
+       "      <th>Average Reading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Average Math  Average Reading\n",
+       "0     78.985371         81.87784"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students_score_table = pd.DataFrame(students_summary)\n",
+    "students_score_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Passing Math': 28356}]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math_scores = pd.DataFrame(students_info_df[\"Math Score\"].value_counts())\n",
+    "#passing math_scores\n",
+    "math_scores.reset_index(inplace=True)\n",
+    "math_scores.columns = ['Math Score', 'Count']\n",
+    "math_scores = math_scores.loc[(math_scores[\"Math Score\"] > 70)]\n",
+    "#math_scores\n",
+    "passing_math_scores = [{\"Passing Math\":math_scores[\"Count\"].sum()}]\n",
+    "passing_math_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'dict' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-112-c3b9b02a80e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpercent_passing_math\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpassing_math_scores\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mstudents_total\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpercent_passing_math\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'dict' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "percent_passing_math = (passing_math_scores/students_total) * 100\n",
+    "percent_passing_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -827,7 +970,7 @@
        "4          84  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,225 +986,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"4\" halign=\"left\">School ID</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">School Name</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">School Type</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Student Gender</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">Reading Score</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">Math Score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Student Grade</th>\n",
-       "      <th>10th</th>\n",
-       "      <th>11th</th>\n",
-       "      <th>12th</th>\n",
-       "      <th>9th</th>\n",
-       "      <th>10th</th>\n",
-       "      <th>11th</th>\n",
-       "      <th>12th</th>\n",
-       "      <th>9th</th>\n",
-       "      <th>10th</th>\n",
-       "      <th>11th</th>\n",
-       "      <th>...</th>\n",
-       "      <th>12th</th>\n",
-       "      <th>9th</th>\n",
-       "      <th>10th</th>\n",
-       "      <th>11th</th>\n",
-       "      <th>12th</th>\n",
-       "      <th>9th</th>\n",
-       "      <th>10th</th>\n",
-       "      <th>11th</th>\n",
-       "      <th>12th</th>\n",
-       "      <th>9th</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              School ID                School Name                           \\\n",
-       "Student Grade      10th 11th 12th  9th        10th  11th               12th   \n",
-       "0                   NaN  NaN  NaN  0.0        None  None               None   \n",
-       "1                   NaN  NaN  0.0  NaN        None  None  Huang High School   \n",
-       "2                   NaN  NaN  0.0  NaN        None  None  Huang High School   \n",
-       "3                   NaN  NaN  0.0  NaN        None  None  Huang High School   \n",
-       "4                   NaN  NaN  NaN  0.0        None  None               None   \n",
-       "\n",
-       "                                 School Type        ...  Student Gender        \\\n",
-       "Student Grade                9th        10th  11th  ...            12th   9th   \n",
-       "0              Huang High School        None  None  ...            None     M   \n",
-       "1                           None        None  None  ...               M  None   \n",
-       "2                           None        None  None  ...               M  None   \n",
-       "3                           None        None  None  ...               M  None   \n",
-       "4              Huang High School        None  None  ...            None     F   \n",
-       "\n",
-       "              Reading Score                  Math Score                   \n",
-       "Student Grade          10th 11th  12th   9th       10th 11th  12th   9th  \n",
-       "0                       NaN  NaN   NaN  66.0        NaN  NaN   NaN  79.0  \n",
-       "1                       NaN  NaN  94.0   NaN        NaN  NaN  61.0   NaN  \n",
-       "2                       NaN  NaN  90.0   NaN        NaN  NaN  60.0   NaN  \n",
-       "3                       NaN  NaN  67.0   NaN        NaN  NaN  58.0   NaN  \n",
-       "4                       NaN  NaN   NaN  97.0        NaN  NaN   NaN  84.0  \n",
-       "\n",
-       "[5 rows x 40 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a high level snapshot (in table form) of the district's key metrics, including:\n",
     "# Total Schools\n",
-    "#total_schools = school_info_df.count(\"School Name\")\n",
-    "#total_schools\n",
     "# Total Students\n",
     "# Total Budget\n",
     "# Average Math Score\n",
@@ -1083,9 +1011,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
